<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fanxh.zodiacchart.HuangLiActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_top_back"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/huangli_title"
            android:textSize="17dp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:text="@string/title_date"
            android:textSize="13dp"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">
        <View
            android:layout_width="3dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:background="@color/colorOrange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:text="@string/user_name"
            android:textSize="17dp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/personal_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/personal_information"
            android:textSize="13dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/personal_information"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_border_color_black_18dp"/>

    </RelativeLayout>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/yunshi_today" />

        <include layout="@layout/yunshi_information" />

        <include layout="@layout/yunshi_item" />

        <include layout="@layout/week_tao_hua_yun" />
    </LinearLayout>
</ScrollView>
</LinearLayout>
